i40e: Fix erroneous adapter reinitialization during recovery process (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2328,6 +2328,7 @@
 	patches.kernel.org/5.18.15-086-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 	patches.kernel.org/5.18.15-087-net-lan966x-Fix-usage-of-lan966x-mac_lock-ins.patch
 	patches.kernel.org/5.18.15-088-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
+	patches.kernel.org/5.18.15-089-i40e-Fix-erroneous-adapter-reinitialization-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
