--- a/series.conf
+++ b/series.conf
@@ -2394,6 +2394,7 @@
 	patches.kernel.org/5.18.15-152-x86-amd-Use-IBPB-for-firmware-calls.patch
 	patches.kernel.org/5.18.15-153-x86-alternative-Report-missing-return-thunk-d.patch
 	patches.kernel.org/5.18.15-154-watchqueue-make-sure-to-serialize-wqueue-defu.patch
+	patches.kernel.org/5.18.15-155-ASoC-SOF-pm-add-explicit-behavior-for-ACPI-S1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
