--- a/series.conf
+++ b/series.conf
@@ -2313,6 +2313,7 @@
 	patches.kernel.org/5.18.15-071-tcp-Fix-data-races-around-some-timeout-sysctl.patch
 	patches.kernel.org/5.18.15-072-tcp-Fix-a-data-race-around-sysctl_tcp_notsent.patch
 	patches.kernel.org/5.18.15-073-tcp-Fix-a-data-race-around-sysctl_tcp_tw_reus.patch
+	patches.kernel.org/5.18.15-074-tcp-Fix-data-races-around-sysctl_max_syn_back.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
