--- a/series.conf
+++ b/series.conf
@@ -2248,6 +2248,7 @@
 	patches.kernel.org/5.18.15-006-mmc-sdhci-omap-Fix-a-lockdep-warning-for-PM-r.patch
 	patches.kernel.org/5.18.15-007-mtd-rawnand-gpmi-Set-WAIT_FOR_READY-timeout-b.patch
 	patches.kernel.org/5.18.15-008-drm-ttm-fix-locking-in-vmap-vunmap-TTM-GEM-he.patch
+	patches.kernel.org/5.18.15-009-drm-amd-display-Fix-new-dmub-notification-ena.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
