exfat: use updated exfat_chain directly during renaming (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2390,6 +2390,7 @@
 	patches.kernel.org/5.18.15-148-crypto-qat-add-param-check-for-DH.patch
 	patches.kernel.org/5.18.15-149-crypto-qat-re-enable-registration-of-algorith.patch
 	patches.kernel.org/5.18.15-150-exfat-fix-referencing-wrong-parent-directory-.patch
+	patches.kernel.org/5.18.15-151-exfat-use-updated-exfat_chain-directly-during.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
