--- a/series.conf
+++ b/series.conf
@@ -2368,6 +2368,7 @@
 	patches.kernel.org/5.18.15-126-tcp-Fix-data-races-around-sysctl_tcp_max_reor.patch
 	patches.kernel.org/5.18.15-127-net-sched-cls_api-Fix-flow-action-initializat.patch
 	patches.kernel.org/5.18.15-128-selftests-gpio-fix-include-path-to-kernel-hea.patch
+	patches.kernel.org/5.18.15-129-gpio-gpio-xilinx-Fix-integer-overflow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
