--- a/series.conf
+++ b/series.conf
@@ -2299,6 +2299,7 @@
 	patches.kernel.org/5.18.15-057-pinctrl-ocelot-Fix-pincfg-for-lan966x.patch
 	patches.kernel.org/5.18.15-058-pinctrl-ocelot-Fix-pincfg.patch
 	patches.kernel.org/5.18.15-059-net-stmmac-fix-dma-queue-left-shift-overflow-.patch
+	patches.kernel.org/5.18.15-060-net-tls-Fix-race-in-TLS-device-down-flow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
