--- a/series.conf
+++ b/series.conf
@@ -2307,6 +2307,7 @@
 	patches.kernel.org/5.18.15-065-igmp-Fix-data-races-around-sysctl_igmp_qrv.patch
 	patches.kernel.org/5.18.15-066-tcp-Fix-data-races-around-keepalive-sysctl-kn.patch
 	patches.kernel.org/5.18.15-067-tcp-Fix-data-races-around-sysctl_tcp_syn-ack-.patch
+	patches.kernel.org/5.18.15-068-tcp-Fix-data-races-around-sysctl_tcp_syncooki.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
