RDMA/irdma: Do not advertise 1GB page size for x722 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2262,6 +2262,7 @@
 	patches.kernel.org/5.18.15-020-xfrm-xfrm_policy-fix-a-possible-double-xfrm_p.patch
 	patches.kernel.org/5.18.15-021-power-supply-ab8500_fg-add-missing-destroy_wo.patch
 	patches.kernel.org/5.18.15-022-power-reset-arm-versatile-Fix-refcount-leak-i.patch
+	patches.kernel.org/5.18.15-023-RDMA-irdma-Do-not-advertise-1GB-page-size-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
