--- a/series.conf
+++ b/series.conf
@@ -2375,6 +2375,7 @@
 	patches.kernel.org/5.18.15-133-mm-mempolicy-fix-uninit-value-in-mpol_rebind_.patch
 	patches.kernel.org/5.18.15-134-bpf-Make-sure-mac_header-was-set-before-using.patch
 	patches.kernel.org/5.18.15-135-sched-deadline-Fix-BUG_ON-condition-for-deboo.patch
+	patches.kernel.org/5.18.15-136-perf-x86-intel-lbr-Fix-unchecked-MSR-access-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
