--- a/series.conf
+++ b/series.conf
@@ -2352,6 +2352,7 @@
 	patches.kernel.org/5.18.15-110-drm-imx-dcss-Add-missing-of_node_put-in-fail-.patch
 	patches.kernel.org/5.18.15-111-can-rcar_canfd-Add-missing-of_node_put-in-rca.patch
 	patches.kernel.org/5.18.15-112-ipv4-Fix-a-data-race-around-sysctl_fib_multip.patch
+	patches.kernel.org/5.18.15-113-ipv4-Fix-data-races-around-sysctl_fib_multipa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
