--- a/series.conf
+++ b/series.conf
@@ -2370,6 +2370,7 @@
 	patches.kernel.org/5.18.15-128-selftests-gpio-fix-include-path-to-kernel-hea.patch
 	patches.kernel.org/5.18.15-129-gpio-gpio-xilinx-Fix-integer-overflow.patch
 	patches.kernel.org/5.18.15-130-KVM-selftests-Fix-target-thread-to-be-migrate.patch
+	patches.kernel.org/5.18.15-131-spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
