--- a/series.conf
+++ b/series.conf
@@ -2302,6 +2302,7 @@
 	patches.kernel.org/5.18.15-060-net-tls-Fix-race-in-TLS-device-down-flow.patch
 	patches.kernel.org/5.18.15-061-net-prestera-acl-use-proper-mask-for-port-sel.patch
 	patches.kernel.org/5.18.15-062-igmp-Fix-data-races-around-sysctl_igmp_llm_re.patch
+	patches.kernel.org/5.18.15-063-igmp-Fix-a-data-race-around-sysctl_igmp_max_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
