--- a/series.conf
+++ b/series.conf
@@ -2266,6 +2266,7 @@
 	patches.kernel.org/5.18.15-024-RDMA-irdma-Fix-sleep-from-invalid-context-BUG.patch
 	patches.kernel.org/5.18.15-025-pinctrl-ralink-rename-MT7628-an-functions-to-.patch
 	patches.kernel.org/5.18.15-026-pinctrl-ralink-rename-pinctrl-rt2880-to-pinct.patch
+	patches.kernel.org/5.18.15-027-pinctrl-ralink-Check-for-null-return-of-devm_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
