--- a/series.conf
+++ b/series.conf
@@ -2286,6 +2286,7 @@
 	patches.kernel.org/5.18.15-044-tcp-Fix-data-races-around-sysctl_tcp_min_snd_.patch
 	patches.kernel.org/5.18.15-045-tcp-Fix-a-data-race-around-sysctl_tcp_mtu_pro.patch
 	patches.kernel.org/5.18.15-046-tcp-Fix-a-data-race-around-sysctl_tcp_probe_t.patch
+	patches.kernel.org/5.18.15-047-tcp-Fix-a-data-race-around-sysctl_tcp_probe_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
