crypto: qat - add backlog mechanism (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2382,6 +2382,7 @@
 	patches.kernel.org/5.18.15-140-crypto-qat-set-to-zero-DH-parameters-before-f.patch
 	patches.kernel.org/5.18.15-141-crypto-qat-use-pre-allocated-buffers-in-datap.patch
 	patches.kernel.org/5.18.15-142-crypto-qat-refactor-submission-logic.patch
+	patches.kernel.org/5.18.15-143-crypto-qat-add-backlog-mechanism.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
