--- a/series.conf
+++ b/series.conf
@@ -2297,6 +2297,7 @@
 	patches.kernel.org/5.18.15-055-perf-tests-Stop-Convert-perf-time-to-TSC-test.patch
 	patches.kernel.org/5.18.15-056-perf-tests-Fix-Convert-perf-time-to-TSC-test-.patch
 	patches.kernel.org/5.18.15-057-pinctrl-ocelot-Fix-pincfg-for-lan966x.patch
+	patches.kernel.org/5.18.15-058-pinctrl-ocelot-Fix-pincfg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
