--- a/series.conf
+++ b/series.conf
@@ -2282,6 +2282,7 @@
 	patches.kernel.org/5.18.15-040-tcp-sk-sk_bound_dev_if-once-in-inet_request_b.patch
 	patches.kernel.org/5.18.15-041-tcp-Fix-data-races-around-sysctl_tcp_l3mdev_a.patch
 	patches.kernel.org/5.18.15-042-tcp-Fix-data-races-around-sysctl_tcp_mtu_prob.patch
+	patches.kernel.org/5.18.15-043-tcp-Fix-data-races-around-sysctl_tcp_base_mss.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
