--- a/series.conf
+++ b/series.conf
@@ -2376,6 +2376,7 @@
 	patches.kernel.org/5.18.15-134-bpf-Make-sure-mac_header-was-set-before-using.patch
 	patches.kernel.org/5.18.15-135-sched-deadline-Fix-BUG_ON-condition-for-deboo.patch
 	patches.kernel.org/5.18.15-136-perf-x86-intel-lbr-Fix-unchecked-MSR-access-e.patch
+	patches.kernel.org/5.18.15-137-x86-bugs-Warn-when-ibrs-mitigation-is-selecte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
