--- a/series.conf
+++ b/series.conf
@@ -2298,6 +2298,7 @@
 	patches.kernel.org/5.18.15-056-perf-tests-Fix-Convert-perf-time-to-TSC-test-.patch
 	patches.kernel.org/5.18.15-057-pinctrl-ocelot-Fix-pincfg-for-lan966x.patch
 	patches.kernel.org/5.18.15-058-pinctrl-ocelot-Fix-pincfg.patch
+	patches.kernel.org/5.18.15-059-net-stmmac-fix-dma-queue-left-shift-overflow-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
