bus: mhi: host: pci_generic: add Telit FN990 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2252,6 +2252,7 @@
 	patches.kernel.org/5.18.15-010-drm-scheduler-Don-t-kill-jobs-in-interrupt-co.patch
 	patches.kernel.org/5.18.15-011-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 	patches.kernel.org/5.18.15-012-bus-mhi-host-pci_generic-add-Telit-FN980-v1-h.patch
+	patches.kernel.org/5.18.15-013-bus-mhi-host-pci_generic-add-Telit-FN990.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
