tcp: Fix a data-race around sysctl_tcp_tw_reuse (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2312,6 +2312,7 @@
 	patches.kernel.org/5.18.15-070-tcp-Fix-data-races-around-sysctl_tcp_reorderi.patch
 	patches.kernel.org/5.18.15-071-tcp-Fix-data-races-around-some-timeout-sysctl.patch
 	patches.kernel.org/5.18.15-072-tcp-Fix-a-data-race-around-sysctl_tcp_notsent.patch
+	patches.kernel.org/5.18.15-073-tcp-Fix-a-data-race-around-sysctl_tcp_tw_reus.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
