--- a/series.conf
+++ b/series.conf
@@ -2293,6 +2293,7 @@
 	patches.kernel.org/5.18.15-051-net-dsa-microchip-ksz_common-Fix-refcount-lea.patch
 	patches.kernel.org/5.18.15-052-tcp-udp-Make-early_demux-back-namespacified.patch
 	patches.kernel.org/5.18.15-053-i2c-mlxcpld-Fix-register-setting-for-400KHz-f.patch
+	patches.kernel.org/5.18.15-054-i2c-cadence-Change-large-transfer-count-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
