--- a/series.conf
+++ b/series.conf
@@ -2265,6 +2265,7 @@
 	patches.kernel.org/5.18.15-023-RDMA-irdma-Do-not-advertise-1GB-page-size-for.patch
 	patches.kernel.org/5.18.15-024-RDMA-irdma-Fix-sleep-from-invalid-context-BUG.patch
 	patches.kernel.org/5.18.15-025-pinctrl-ralink-rename-MT7628-an-functions-to-.patch
+	patches.kernel.org/5.18.15-026-pinctrl-ralink-rename-pinctrl-rt2880-to-pinct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
