--- a/series.conf
+++ b/series.conf
@@ -2279,6 +2279,7 @@
 	patches.kernel.org/5.18.15-037-ip-Fix-a-data-race-around-sysctl_ip_autobind_.patch
 	patches.kernel.org/5.18.15-038-ip-Fix-a-data-race-around-sysctl_fwmark_refle.patch
 	patches.kernel.org/5.18.15-039-tcp-dccp-Fix-a-data-race-around-sysctl_tcp_fw.patch
+	patches.kernel.org/5.18.15-040-tcp-sk-sk_bound_dev_if-once-in-inet_request_b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
