net: dsa: move reset of VLAN filtering to dsa_port_switchdev_unsync_attrs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2331,6 +2331,7 @@
 	patches.kernel.org/5.18.15-089-i40e-Fix-erroneous-adapter-reinitialization-d.patch
 	patches.kernel.org/5.18.15-090-ixgbe-Add-locking-to-prevent-panic-when-setti.patch
 	patches.kernel.org/5.18.15-091-net-dsa-fix-dsa_port_vlan_filtering-when-glob.patch
+	patches.kernel.org/5.18.15-092-net-dsa-move-reset-of-VLAN-filtering-to-dsa_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
