tcp: Fix data-races around sysctl knobs related to SYN option (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2356,6 +2356,7 @@
 	patches.kernel.org/5.18.15-114-ipv4-Fix-data-races-around-sysctl_fib_multipa.patch
 	patches.kernel.org/5.18.15-115-ip-Fix-data-races-around-sysctl_ip_prot_sock.patch
 	patches.kernel.org/5.18.15-116-udp-Fix-a-data-race-around-sysctl_udp_l3mdev_.patch
+	patches.kernel.org/5.18.15-117-tcp-Fix-data-races-around-sysctl-knobs-relate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
