perf tests: Fix Convert perf time to TSC test for hybrid (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2295,6 +2295,7 @@
 	patches.kernel.org/5.18.15-053-i2c-mlxcpld-Fix-register-setting-for-400KHz-f.patch
 	patches.kernel.org/5.18.15-054-i2c-cadence-Change-large-transfer-count-reset.patch
 	patches.kernel.org/5.18.15-055-perf-tests-Stop-Convert-perf-time-to-TSC-test.patch
+	patches.kernel.org/5.18.15-056-perf-tests-Fix-Convert-perf-time-to-TSC-test-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
