bus: mhi: host: pci_generic: add Telit FN980 v1 hardware revision (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2251,6 +2251,7 @@
 	patches.kernel.org/5.18.15-009-drm-amd-display-Fix-new-dmub-notification-ena.patch
 	patches.kernel.org/5.18.15-010-drm-scheduler-Don-t-kill-jobs-in-interrupt-co.patch
 	patches.kernel.org/5.18.15-011-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
+	patches.kernel.org/5.18.15-012-bus-mhi-host-pci_generic-add-Telit-FN980-v1-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
