pinctrl: ralink: rename MT7628(an) functions to MT76X8 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2264,6 +2264,7 @@
 	patches.kernel.org/5.18.15-022-power-reset-arm-versatile-Fix-refcount-leak-i.patch
 	patches.kernel.org/5.18.15-023-RDMA-irdma-Do-not-advertise-1GB-page-size-for.patch
 	patches.kernel.org/5.18.15-024-RDMA-irdma-Fix-sleep-from-invalid-context-BUG.patch
+	patches.kernel.org/5.18.15-025-pinctrl-ralink-rename-MT7628-an-functions-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
