net: stmmac: remove redunctant disable xPCS EEE call (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2333,6 +2333,7 @@
 	patches.kernel.org/5.18.15-091-net-dsa-fix-dsa_port_vlan_filtering-when-glob.patch
 	patches.kernel.org/5.18.15-092-net-dsa-move-reset-of-VLAN-filtering-to-dsa_p.patch
 	patches.kernel.org/5.18.15-093-net-dsa-fix-NULL-pointer-dereference-in-dsa_p.patch
+	patches.kernel.org/5.18.15-094-net-stmmac-remove-redunctant-disable-xPCS-EEE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
