--- a/series.conf
+++ b/series.conf
@@ -2373,6 +2373,7 @@
 	patches.kernel.org/5.18.15-131-spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-p.patch
 	patches.kernel.org/5.18.15-132-KVM-Don-t-null-dereference-ops-destroy.patch
 	patches.kernel.org/5.18.15-133-mm-mempolicy-fix-uninit-value-in-mpol_rebind_.patch
+	patches.kernel.org/5.18.15-134-bpf-Make-sure-mac_header-was-set-before-using.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
