PCI: hv: Reuse existing IRTE allocation in compose_msi_msg() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2255,6 +2255,7 @@
 	patches.kernel.org/5.18.15-013-bus-mhi-host-pci_generic-add-Telit-FN990.patch
 	patches.kernel.org/5.18.15-014-PCI-hv-Fix-multi-MSI-to-allow-more-than-one-M.patch
 	patches.kernel.org/5.18.15-015-PCI-hv-Fix-hv_arch_irq_unmask-for-multi-MSI.patch
+	patches.kernel.org/5.18.15-016-PCI-hv-Reuse-existing-IRTE-allocation-in-comp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
