--- a/series.conf
+++ b/series.conf
@@ -2357,6 +2357,7 @@
 	patches.kernel.org/5.18.15-115-ip-Fix-data-races-around-sysctl_ip_prot_sock.patch
 	patches.kernel.org/5.18.15-116-udp-Fix-a-data-race-around-sysctl_udp_l3mdev_.patch
 	patches.kernel.org/5.18.15-117-tcp-Fix-data-races-around-sysctl-knobs-relate.patch
+	patches.kernel.org/5.18.15-118-tcp-Fix-a-data-race-around-sysctl_tcp_early_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
