--- a/series.conf
+++ b/series.conf
@@ -2384,6 +2384,7 @@
 	patches.kernel.org/5.18.15-142-crypto-qat-refactor-submission-logic.patch
 	patches.kernel.org/5.18.15-143-crypto-qat-add-backlog-mechanism.patch
 	patches.kernel.org/5.18.15-144-crypto-qat-fix-memory-leak-in-RSA.patch
+	patches.kernel.org/5.18.15-145-crypto-qat-remove-dma_free_coherent-for-RSA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
