--- a/series.conf
+++ b/series.conf
@@ -2332,6 +2332,7 @@
 	patches.kernel.org/5.18.15-090-ixgbe-Add-locking-to-prevent-panic-when-setti.patch
 	patches.kernel.org/5.18.15-091-net-dsa-fix-dsa_port_vlan_filtering-when-glob.patch
 	patches.kernel.org/5.18.15-092-net-dsa-move-reset-of-VLAN-filtering-to-dsa_p.patch
+	patches.kernel.org/5.18.15-093-net-dsa-fix-NULL-pointer-dereference-in-dsa_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
