--- a/series.conf
+++ b/series.conf
@@ -2381,6 +2381,7 @@
 	patches.kernel.org/5.18.15-139-dlm-fix-pending-remove-if-msg-allocation-fail.patch
 	patches.kernel.org/5.18.15-140-crypto-qat-set-to-zero-DH-parameters-before-f.patch
 	patches.kernel.org/5.18.15-141-crypto-qat-use-pre-allocated-buffers-in-datap.patch
+	patches.kernel.org/5.18.15-142-crypto-qat-refactor-submission-logic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
