net: dsa: vitesse-vsc73xx: silent spi_device_id warnings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2339,6 +2339,7 @@
 	patches.kernel.org/5.18.15-097-gpio-pca953x-use-the-correct-register-address.patch
 	patches.kernel.org/5.18.15-098-be2net-Fix-buffer-overflow-in-be_get_module_e.patch
 	patches.kernel.org/5.18.15-099-net-dsa-sja1105-silent-spi_device_id-warnings.patch
+	patches.kernel.org/5.18.15-100-net-dsa-vitesse-vsc73xx-silent-spi_device_id-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
