--- a/series.conf
+++ b/series.conf
@@ -2288,6 +2288,7 @@
 	patches.kernel.org/5.18.15-046-tcp-Fix-a-data-race-around-sysctl_tcp_probe_t.patch
 	patches.kernel.org/5.18.15-047-tcp-Fix-a-data-race-around-sysctl_tcp_probe_i.patch
 	patches.kernel.org/5.18.15-048-stmmac-dwmac-mediatek-fix-clock-issue.patch
+	patches.kernel.org/5.18.15-049-net-stmmac-fix-pm-runtime-issue-in-stmmac_dvr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
