amt: drop unexpected query message (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2345,6 +2345,7 @@
 	patches.kernel.org/5.18.15-103-amt-use-READ_ONCE-in-amt-module.patch
 	patches.kernel.org/5.18.15-104-amt-add-missing-regeneration-nonce-logic-in-r.patch
 	patches.kernel.org/5.18.15-105-amt-drop-unexpected-advertisement-message.patch
+	patches.kernel.org/5.18.15-106-amt-drop-unexpected-query-message.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
