clk: lan966x: Fix the lan966x clock gate register address (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2377,6 +2377,7 @@
 	patches.kernel.org/5.18.15-135-sched-deadline-Fix-BUG_ON-condition-for-deboo.patch
 	patches.kernel.org/5.18.15-136-perf-x86-intel-lbr-Fix-unchecked-MSR-access-e.patch
 	patches.kernel.org/5.18.15-137-x86-bugs-Warn-when-ibrs-mitigation-is-selecte.patch
+	patches.kernel.org/5.18.15-138-clk-lan966x-Fix-the-lan966x-clock-gate-regist.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
