--- a/series.conf
+++ b/series.conf
@@ -2327,6 +2327,7 @@
 	patches.kernel.org/5.18.15-085-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 	patches.kernel.org/5.18.15-086-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 	patches.kernel.org/5.18.15-087-net-lan966x-Fix-usage-of-lan966x-mac_lock-ins.patch
+	patches.kernel.org/5.18.15-088-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
