--- a/series.conf
+++ b/series.conf
@@ -2322,6 +2322,7 @@
 	patches.kernel.org/5.18.15-080-iavf-Fix-missing-state-logs.patch
 	patches.kernel.org/5.18.15-081-ACPI-CPPC-Don-t-require-flexible-address-spac.patch
 	patches.kernel.org/5.18.15-082-pinctrl-armada-37xx-Reuse-GPIO-fwnode-in-arma.patch
+	patches.kernel.org/5.18.15-083-pinctrl-armada-37xx-make-irq_lock-a-raw-spinl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
