igmp: Fix data-races around sysctl_igmp_llm_reports (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2301,6 +2301,7 @@
 	patches.kernel.org/5.18.15-059-net-stmmac-fix-dma-queue-left-shift-overflow-.patch
 	patches.kernel.org/5.18.15-060-net-tls-Fix-race-in-TLS-device-down-flow.patch
 	patches.kernel.org/5.18.15-061-net-prestera-acl-use-proper-mask-for-port-sel.patch
+	patches.kernel.org/5.18.15-062-igmp-Fix-data-races-around-sysctl_igmp_llm_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
