--- a/series.conf
+++ b/series.conf
@@ -2369,6 +2369,7 @@
 	patches.kernel.org/5.18.15-127-net-sched-cls_api-Fix-flow-action-initializat.patch
 	patches.kernel.org/5.18.15-128-selftests-gpio-fix-include-path-to-kernel-hea.patch
 	patches.kernel.org/5.18.15-129-gpio-gpio-xilinx-Fix-integer-overflow.patch
+	patches.kernel.org/5.18.15-130-KVM-selftests-Fix-target-thread-to-be-migrate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
