--- a/series.conf
+++ b/series.conf
@@ -2242,6 +2242,7 @@
 	patches.kernel.org/5.18.14-071-Linux-5.18.14.patch
 	patches.kernel.org/5.18.15-001-pinctrl-armada-37xx-use-raw-spinlocks-for-reg.patch
 	patches.kernel.org/5.18.15-002-pinctrl-stm32-fix-optional-IRQ-support-to-gpi.patch
+	patches.kernel.org/5.18.15-003-riscv-add-as-options-for-modules-with-assembl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
