--- a/series.conf
+++ b/series.conf
@@ -2336,6 +2336,7 @@
 	patches.kernel.org/5.18.15-094-net-stmmac-remove-redunctant-disable-xPCS-EEE.patch
 	patches.kernel.org/5.18.15-095-gpio-pca953x-only-use-single-read-write-for-N.patch
 	patches.kernel.org/5.18.15-096-gpio-pca953x-use-the-correct-range-when-do-re.patch
+	patches.kernel.org/5.18.15-097-gpio-pca953x-use-the-correct-register-address.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
