--- a/series.conf
+++ b/series.conf
@@ -2285,6 +2285,7 @@
 	patches.kernel.org/5.18.15-043-tcp-Fix-data-races-around-sysctl_tcp_base_mss.patch
 	patches.kernel.org/5.18.15-044-tcp-Fix-data-races-around-sysctl_tcp_min_snd_.patch
 	patches.kernel.org/5.18.15-045-tcp-Fix-a-data-race-around-sysctl_tcp_mtu_pro.patch
+	patches.kernel.org/5.18.15-046-tcp-Fix-a-data-race-around-sysctl_tcp_probe_t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
