--- a/series.conf
+++ b/series.conf
@@ -2243,6 +2243,7 @@
 	patches.kernel.org/5.18.15-001-pinctrl-armada-37xx-use-raw-spinlocks-for-reg.patch
 	patches.kernel.org/5.18.15-002-pinctrl-stm32-fix-optional-IRQ-support-to-gpi.patch
 	patches.kernel.org/5.18.15-003-riscv-add-as-options-for-modules-with-assembl.patch
+	patches.kernel.org/5.18.15-004-mlxsw-spectrum_router-Fix-IPv4-nexthop-gatewa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
