tcp: Fix data-races around sysctl_tcp_min_snd_mss (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2283,6 +2283,7 @@
 	patches.kernel.org/5.18.15-041-tcp-Fix-data-races-around-sysctl_tcp_l3mdev_a.patch
 	patches.kernel.org/5.18.15-042-tcp-Fix-data-races-around-sysctl_tcp_mtu_prob.patch
 	patches.kernel.org/5.18.15-043-tcp-Fix-data-races-around-sysctl_tcp_base_mss.patch
+	patches.kernel.org/5.18.15-044-tcp-Fix-data-races-around-sysctl_tcp_min_snd_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
