ip: Fix data-races around sysctl_ip_default_ttl (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2258,6 +2258,7 @@
 	patches.kernel.org/5.18.15-016-PCI-hv-Reuse-existing-IRTE-allocation-in-comp.patch
 	patches.kernel.org/5.18.15-017-PCI-hv-Fix-interrupt-mapping-for-multi-MSI.patch
 	patches.kernel.org/5.18.15-018-r8152-fix-a-WOL-issue.patch
+	patches.kernel.org/5.18.15-019-ip-Fix-data-races-around-sysctl_ip_default_tt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
