pinctrl: stm32: fix optional IRQ support to gpios (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2241,6 +2241,7 @@
 	patches.kernel.org/5.18.14-070-um-Add-missing-apply_returns.patch
 	patches.kernel.org/5.18.14-071-Linux-5.18.14.patch
 	patches.kernel.org/5.18.15-001-pinctrl-armada-37xx-use-raw-spinlocks-for-reg.patch
+	patches.kernel.org/5.18.15-002-pinctrl-stm32-fix-optional-IRQ-support-to-gpi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
