--- a/series.conf
+++ b/series.conf
@@ -2318,6 +2318,7 @@
 	patches.kernel.org/5.18.15-076-tcp-Fix-data-races-around-sysctl_tcp_fastopen.patch
 	patches.kernel.org/5.18.15-077-iavf-Fix-VLAN_V2-addition-rejection.patch
 	patches.kernel.org/5.18.15-078-iavf-Disallow-changing-rx-tx-frames-and-rx-tx.patch
+	patches.kernel.org/5.18.15-079-iavf-Fix-handling-of-dummy-receive-descriptor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
