--- a/series.conf
+++ b/series.conf
@@ -2260,6 +2260,7 @@
 	patches.kernel.org/5.18.15-018-r8152-fix-a-WOL-issue.patch
 	patches.kernel.org/5.18.15-019-ip-Fix-data-races-around-sysctl_ip_default_tt.patch
 	patches.kernel.org/5.18.15-020-xfrm-xfrm_policy-fix-a-possible-double-xfrm_p.patch
+	patches.kernel.org/5.18.15-021-power-supply-ab8500_fg-add-missing-destroy_wo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
