--- a/series.conf
+++ b/series.conf
@@ -2296,6 +2296,7 @@
 	patches.kernel.org/5.18.15-054-i2c-cadence-Change-large-transfer-count-reset.patch
 	patches.kernel.org/5.18.15-055-perf-tests-Stop-Convert-perf-time-to-TSC-test.patch
 	patches.kernel.org/5.18.15-056-perf-tests-Fix-Convert-perf-time-to-TSC-test-.patch
+	patches.kernel.org/5.18.15-057-pinctrl-ocelot-Fix-pincfg-for-lan966x.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
