tcp: Fix a data-race around sysctl_tcp_mtu_probe_floor (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2284,6 +2284,7 @@
 	patches.kernel.org/5.18.15-042-tcp-Fix-data-races-around-sysctl_tcp_mtu_prob.patch
 	patches.kernel.org/5.18.15-043-tcp-Fix-data-races-around-sysctl_tcp_base_mss.patch
 	patches.kernel.org/5.18.15-044-tcp-Fix-data-races-around-sysctl_tcp_min_snd_.patch
+	patches.kernel.org/5.18.15-045-tcp-Fix-a-data-race-around-sysctl_tcp_mtu_pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
