amt: drop unexpected multicast data (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2346,6 +2346,7 @@
 	patches.kernel.org/5.18.15-104-amt-add-missing-regeneration-nonce-logic-in-r.patch
 	patches.kernel.org/5.18.15-105-amt-drop-unexpected-advertisement-message.patch
 	patches.kernel.org/5.18.15-106-amt-drop-unexpected-query-message.patch
+	patches.kernel.org/5.18.15-107-amt-drop-unexpected-multicast-data.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
