--- a/series.conf
+++ b/series.conf
@@ -2391,6 +2391,7 @@
 	patches.kernel.org/5.18.15-149-crypto-qat-re-enable-registration-of-algorith.patch
 	patches.kernel.org/5.18.15-150-exfat-fix-referencing-wrong-parent-directory-.patch
 	patches.kernel.org/5.18.15-151-exfat-use-updated-exfat_chain-directly-during.patch
+	patches.kernel.org/5.18.15-152-x86-amd-Use-IBPB-for-firmware-calls.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
