--- a/series.conf
+++ b/series.conf
@@ -2245,6 +2245,7 @@
 	patches.kernel.org/5.18.15-003-riscv-add-as-options-for-modules-with-assembl.patch
 	patches.kernel.org/5.18.15-004-mlxsw-spectrum_router-Fix-IPv4-nexthop-gatewa.patch
 	patches.kernel.org/5.18.15-005-lockdown-Fix-kexec-lockdown-bypass-with-ima-p.patch
+	patches.kernel.org/5.18.15-006-mmc-sdhci-omap-Fix-a-lockdep-warning-for-PM-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
