--- a/series.conf
+++ b/series.conf
@@ -2309,6 +2309,7 @@
 	patches.kernel.org/5.18.15-067-tcp-Fix-data-races-around-sysctl_tcp_syn-ack-.patch
 	patches.kernel.org/5.18.15-068-tcp-Fix-data-races-around-sysctl_tcp_syncooki.patch
 	patches.kernel.org/5.18.15-069-tcp-Fix-data-races-around-sysctl_tcp_migrate_.patch
+	patches.kernel.org/5.18.15-070-tcp-Fix-data-races-around-sysctl_tcp_reorderi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
