tcp: Fix data-races around keepalive sysctl knobs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2305,6 +2305,7 @@
 	patches.kernel.org/5.18.15-063-igmp-Fix-a-data-race-around-sysctl_igmp_max_m.patch
 	patches.kernel.org/5.18.15-064-igmp-Fix-data-races-around-sysctl_igmp_max_ms.patch
 	patches.kernel.org/5.18.15-065-igmp-Fix-data-races-around-sysctl_igmp_qrv.patch
+	patches.kernel.org/5.18.15-066-tcp-Fix-data-races-around-keepalive-sysctl-kn.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
