Revert selftest patches that have been reverted in stable-5.15.y

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -355,3 +355,7 @@ b2aa4f80693b7841e5ac4eadbd2d8cec56b10a51 # ALSA: not applicable for SLE15-SP4, t
 4fb27190879b82e48ce89a56e9d6c04437dbc065 # ALSA: not applicable for SLE15-SP4, to be unblocked on later SPs
 f20ae5074dfb38f23b0c07c62bdf8e7254a0acf8 # ALSA: not applicable for SLE15-SP4, to be unblocked on later SPs
 c5e58c4545a69677d078b4c813b5d10d3481be9c # ALSA: not applicable for SLE15-SP4, to be unblocked on later SPs
+9c85a9bae267f6b5e5e374d0d023bbbe9db096d3 # selftest:vm: reverted in stable below
+0791309aa0eb2d39c116ff95bab120e53b0c8f94 # selftest:vm: reverting the above
+18d609daa546c919fd36b62a7b510c18de4b4af8 # selftest:vm: reverted in stable below
+cfd3a9be0ac423be41afcc7a07d708056bf097a8 # selftest:vm: reverting the above
