--- a/series.conf
+++ b/series.conf
@@ -8487,6 +8487,7 @@
 	patches.suse/objtool-add-straight-line-speculation-validation.patch
 	patches.suse/x86-alternative-relax-text_poke_bp-constraint.patch
 	patches.suse/x86-add-straight-line-speculation-mitigation.patch
+	patches.suse/bitfield.h-Fix-type-of-reg-too-small-for-mask-test.patch
 	patches.suse/xen-x86-obtain-upper-32-bits-of-video-frame-buffer-a.patch
 	patches.suse/dt-bindings-thermal-Fix-definition-of-cooling-maps-c.patch
 	patches.suse/of-unittest-fix-warning-on-PowerPC-frame-size-warnin.patch
