--- a/series.conf
+++ b/series.conf
@@ -9586,6 +9586,7 @@
 	patches.suse/auxdisplay-lcd2s-Fix-lcd2s_redefine_char-feature.patch
 	patches.suse/auxdisplay-lcd2s-Fix-memory-leak-in-remove.patch
 	patches.suse/auxdisplay-lcd2s-Use-proper-API-to-free-the-instance.patch
+	patches.suse/Bluetooth-Fix-bt_skb_sendmmsg-not-allocating-partial.patch
 	patches.suse/net-smc-fix-connection-leak
 	patches.suse/xfrm-fix-mtu-regression.patch
 	patches.suse/revert-xfrm-xfrm_state_mtu-should-return-at-least-1280.patch
