drm/amd/display: Ignore First MST Sideband Message Return Error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12570,6 +12570,7 @@
 	patches.suse/drm-i915-selftests-fix-a-couple-IS_ERR-vs-NULL-tests.patch
 	patches.suse/drm-i915-gt-Serialize-GRDOM-access-between-multiple-.patch
 	patches.suse/drm-i915-gt-Serialize-TLB-invalidates-with-GT-resets.patch
+	patches.suse/drm-amd-display-Ignore-First-MST-Sideband-Message-Re.patch
 	patches.suse/drm-amd-display-Only-use-depth-36-bpp-linebuffers-on.patch
 	patches.suse/ACPI-video-Fix-acpi_video_handles_brightness_key_pre.patch
 	patches.suse/arm64-dts-rockchip-Assign-RK3399-VDU-clock-rate.patch
