Bluetooth: SCO: Fix sco_send_frame returning skb->len (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5218,6 +5218,7 @@
 	patches.suse/Bluetooth-SCO-Replace-use-of-memcpy_from_msg-with-bt.patch
 	patches.suse/Bluetooth-RFCOMM-Replace-use-of-memcpy_from_msg-with.patch
 	patches.suse/Bluetooth-Fix-passing-NULL-to-PTR_ERR.patch
+	patches.suse/Bluetooth-SCO-Fix-sco_send_frame-returning-skb-len.patch
 	patches.suse/Bluetooth-btusb-Add-gpio-reset-way-for-qca-btsoc-in-.patch
 	patches.suse/Bluetooth-btmtkuart-fix-a-memleak-in-mtk_hci_wmt_syn.patch
 	patches.suse/Bbluetooth-btusb-Add-another-Bluetooth-part-for-Real.patch
