--- a/series.conf
+++ b/series.conf
@@ -5215,6 +5215,7 @@
 	patches.suse/Bluetooth-fix-init-and-cleanup-of-sco_conn.timeout_w.patch
 	patches.suse/Bluetooth-Add-bt_skb_sendmsg-helper.patch
 	patches.suse/Bluetooth-Add-bt_skb_sendmmsg-helper.patch
+	patches.suse/Bluetooth-SCO-Replace-use-of-memcpy_from_msg-with-bt.patch
 	patches.suse/Bluetooth-btusb-Add-gpio-reset-way-for-qca-btsoc-in-.patch
 	patches.suse/Bluetooth-btmtkuart-fix-a-memleak-in-mtk_hci_wmt_syn.patch
 	patches.suse/Bbluetooth-btusb-Add-another-Bluetooth-part-for-Real.patch
