--- a/series.conf
+++ b/series.conf
@@ -8409,6 +8409,7 @@
 	patches.suse/md-Move-alloc-free-acct-bioset-in-to-personality.patch
 	patches.suse/pinctrl-armada-37xx-Use-temporary-variable-for-struc.patch
 	patches.suse/pinctrl-armada-37xx-Make-use-of-the-devm_platform_io.patch
+	patches.suse/pinctrl-armada-37xx-Convert-to-use-dev_err_probe.patch
 	patches.suse/pinctrl-renesas-rza1-Fix-kerneldoc-function-names.patch
 	patches.suse/device-property-Check-fwnode-secondary-when-finding-.patch
 	patches.suse/PCI-Add-defines-for-accessing-PCIe-DVSEC-fields.patch
