nouveau/svm: Fix to migrate all requested pages (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12639,6 +12639,7 @@
 	patches.suse/macsec-fix-error-message-in-macsec_add_rxsa-and-_txs.patch
 	patches.suse/macsec-limit-replay-window-size-with-XPN.patch
 	patches.suse/macsec-always-read-MACSEC_SA_ATTR_PN-as-a-u64.patch
+	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
