--- a/series.conf
+++ b/series.conf
@@ -10584,6 +10584,7 @@
 	patches.suse/spi-mxic-Fix-the-transmit-path.patch
 	patches.suse/mtd-onenand-Check-for-error-irq.patch
 	patches.suse/mtd-rawnand-gpmi-fix-controller-timings-setting.patch
+	patches.suse/mtd-rawnand-gpmi-validate-controller-clock-rate.patch
 	patches.suse/mtd-rawnand-pl353-Set-the-nand-chip-node-as-the-flas.patch
 	patches.suse/mtd-rawnand-atmel-fix-refcount-issue-in-atmel_nand_c.patch
 	patches.suse/mfd-mc13xxx-Add-check-for-mc13xxx_irq_request.patch
