--- a/series.conf
+++ b/series.conf
@@ -8407,6 +8407,7 @@
 	patches.suse/nvme-add-iopolicy-module-parameter.patch
 	patches.suse/md-raid5-play-nice-with-PREEMPT_RT.patch
 	patches.suse/md-Move-alloc-free-acct-bioset-in-to-personality.patch
+	patches.suse/pinctrl-armada-37xx-Use-temporary-variable-for-struc.patch
 	patches.suse/pinctrl-renesas-rza1-Fix-kerneldoc-function-names.patch
 	patches.suse/device-property-Check-fwnode-secondary-when-finding-.patch
 	patches.suse/PCI-Add-defines-for-accessing-PCIe-DVSEC-fields.patch
