--- a/series.conf
+++ b/series.conf
@@ -12096,6 +12096,7 @@
 	patches.suse/usb-ehci-omap-drop-unused-ehci_read-function.patch
 	patches.suse/usb-dwc3-gadget-Prevent-repeat-pullup.patch
 	patches.suse/usb-core-hcd-Add-support-for-deferring-roothub-regis.patch
+	patches.suse/xhci-Set-HCD-flag-to-defer-primary-roothub-registrat.patch
 	patches.suse/xhci-Allow-host-runtime-PM-as-default-for-Intel-Alde.patch
 	patches.suse/thunderbolt-Use-different-lane-for-second-DisplayPor.patch
 	patches.suse/usb-isp1760-Fix-out-of-bounds-array-access.patch
