--- a/series.conf
+++ b/series.conf
@@ -10620,6 +10620,7 @@
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
 	patches.suse/usb-ehci-add-pci-device-support-for-Aspeed-platforms.patch
 	patches.suse/xhci-dbc-refactor-xhci_dbc_init.patch
+	patches.suse/xhci-dbc-create-and-remove-dbc-structure-in-dbgtty-d.patch
 	patches.suse/usb-dwc3-pci-Set-the-swnode-from-inside-dwc3_pci_qui.patch
 	patches.suse/usb-typec-tipd-Forward-plug-orientation-to-typec-sub.patch
 	patches.suse/xhci-make-xhci_handshake-timeout-for-xhci_reset-adju.patch
