--- a/series.conf
+++ b/series.conf
@@ -12634,6 +12634,7 @@
 	patches.suse/spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-pointer-.patch
 	patches.suse/asm-generic-remove-a-broken-and-needless-ifdef-condi.patch
 	patches.suse/watch_queue-Fix-missing-rcu-annotation.patch
+	patches.suse/watch_queue-Fix-missing-locking-in-add_watch_to_obje.patch
 	patches.suse/macsec-fix-NULL-deref-in-macsec_add_rxsa.patch
 	patches.suse/macsec-fix-error-message-in-macsec_add_rxsa-and-_txs.patch
 	patches.suse/macsec-limit-replay-window-size-with-XPN.patch
