- watchqueue: make sure to serialize 'wqueue->defunct' properly   (git-fixes). - Refresh   patches.suse/watch_queue-Fix-missing-rcu-annotation.patch.

--- a/series.conf
+++ b/series.conf
@@ -12605,6 +12605,7 @@
 	patches.suse/power-reset-arm-versatile-Fix-refcount-leak-in-versa.patch
 	patches.suse/x86-bugs-remove-apostrophe-typo.patch
 	patches.suse/lockdown-Fix-kexec-lockdown-bypass-with-ima-policy.patch
+	patches.suse/watchqueue-make-sure-to-serialize-wqueue-defunct-pro.patch
 	patches.suse/e1000e-Enable-GPT-clock-before-sending-message-to-CS.patch
 	patches.suse/Revert-e1000e-Fix-possible-HW-unit-hang-after-an-s0i.patch
 	patches.suse/docs-net-dsa-update-probing-documentation.patch
