--- a/series.conf
+++ b/series.conf
@@ -9711,6 +9711,7 @@
 	patches.suse/scsi-mpt3sas-Page-fault-in-reply-q-processing.patch
 	patches.suse/Input-zinitix-do-not-report-shadow-fingers.patch
 	patches.suse/Input-aiptek-properly-check-endpoint-type.patch
+	patches.suse/kvm-emulate-fix-setcc-emulation-function-offsets-with-sls.patch
 	patches.suse/tpm-Fix-error-handling-in-async-work.patch
 	patches.suse/KEYS-fix-length-validation-in-keyctl_pkey_params_get.patch
 	patches.suse/KEYS-trusted-Fix-trusted-key-backends-when-building-.patch
