KVM: emulate: do not adjust size of fastop and setcc subroutines (bsc#1201930).

--- a/series.conf
+++ b/series.conf
@@ -12576,6 +12576,7 @@
 	patches.suse/arm64-dts-broadcom-bcm4908-Fix-timer-node-for-BCM490.patch
 	patches.suse/arm64-dts-broadcom-bcm4908-Fix-cpu-node-for-smp-boot.patch
 	patches.suse/spi-amd-Limit-max-transfer-and-message-size.patch
+	patches.suse/kvm-emulate-do-not-adjust-size-of-fastop-and-setcc-subroutines.patch
 	patches.suse/efi-x86-use-naked-RET-on-mixed-mode-call-wrapper.patch
 	patches.suse/tty-serial-samsung_tty-set-dma-burst_size-to-1.patch
 	patches.suse/serial-pl011-UPSTAT_AUTORTS-requires-.throttle-unthr.patch
