ARM: 9216/1: Fix MAX_DMA_ADDRESS overflow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12640,6 +12640,7 @@
 	patches.suse/macsec-limit-replay-window-size-with-XPN.patch
 	patches.suse/macsec-always-read-MACSEC_SA_ATTR_PN-as-a-u64.patch
 	patches.suse/nouveau-svm-Fix-to-migrate-all-requested-pages.patch
+	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
