lkdtm: Disable return thunks in rodata.c (bsc#1190497).

--- a/series.conf
+++ b/series.conf
@@ -12635,6 +12635,7 @@
 	patches.suse/i2c-mlxcpld-Fix-register-setting-for-400KHz-frequenc.patch
 	patches.suse/i2c-cadence-Change-large-transfer-count-reset-logic-.patch
 	patches.suse/spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-pointer-.patch
+	patches.suse/lkdtm-disable-return-thunks-in-rodata-c.patch
 	patches.suse/asm-generic-remove-a-broken-and-needless-ifdef-condi.patch
 	patches.suse/watch_queue-Fix-missing-rcu-annotation.patch
 	patches.suse/watch_queue-Fix-missing-locking-in-add_watch_to_obje.patch
