--- a/series.conf
+++ b/series.conf
@@ -13006,6 +13006,7 @@
 	########################################################
 	patches.suse/0002-drm-ast-Create-the-driver-for-ASPEED-proprietory-Dis.patch
 	patches.suse/0001-firmware-sysfb-Add-parameter-to-enable-sysfb-support.patch
+	patches.suse/0001-drm-udl-Restore-display-mode-on-resume.patch
 
 	########################################################
 	# Storage
