KVM: VMX: Add non-canonical check on writes to RTIT address MSRs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -20933,6 +20933,7 @@
 	patches.suse/kvm-nvmx-vmwrite-checks-unsupported-field-before-read-only-field
 	patches.suse/kvm-x86-fix-potential-put_fpu-w-o-load_fpu-on-mpx-platform
 	patches.suse/msft-hv-2009-KVM-hyperv-Fix-some-typos-in-vcpu-unimpl-info.patch
+	patches.suse/KVM-VMX-Add-non-canonical-check-on-writes-to-RTIT-ad.patch
 	patches.suse/KVM-x86-Don-t-let-userspace-set-host-reserved-cr4-bi.patch
 	patches.suse/kvm-svm-override-default-mmio-mask-if-memory-encryption-is-enabled
 	patches.suse/kvm-x86-mmu-apply-max-pa-check-for-mmio-sptes-to-32-bit-kvm
