--- a/series.conf
+++ b/series.conf
@@ -10729,6 +10729,7 @@
 	patches.suse/serial-8250-fix-XOFF-XON-sending-when-DMA-is-used.patch
 	patches.suse/xen-fix-is_xen_pmu.patch
 	patches.suse/livepatch-Don-t-block-removal-of-patches-that-are-safe-to-unload.patch
+	patches.suse/net-usb-ax88179_178a-add-Allied-Telesis-AT-UMCs.patch
 	patches.suse/vsock-virtio-initialize-vdev-priv-before-using-VQs.patch
 	patches.suse/vsock-virtio-read-the-negotiated-features-before-usi.patch
 	patches.suse/vsock-virtio-enable-VQs-early-on-probe.patch
