--- a/series.conf
+++ b/series.conf
@@ -12243,6 +12243,7 @@
 	patches.suse/Documentation-add-description-for-net.sctp.reconf_en.patch
 	patches.suse/Documentation-add-description-for-net.sctp.intl_enab.patch
 	patches.suse/Documentation-add-description-for-net.sctp.ecn_enabl.patch
+	patches.suse/net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 	patches.suse/net-ax25-Fix-deadlock-caused-by-skb_recv_datagram-in.patch
 	patches.suse/drm-i915-reset-Fix-error_state_read-ptr-offset-use.patch
 	patches.suse/drm-amd-display-Cap-OLED-brightness-per-max-frame-av.patch
