net: asix: fix "can't send until first packet is send" issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12380,6 +12380,7 @@
 	patches.suse/selftests-net-pass-ipv6_args-to-udpgso_bench-s-IPv6-.patch
 	patches.suse/tunnels-do-not-assume-mac-header-is-set-in-skb_tunne.patch
 	patches.suse/epic100-fix-use-after-free-on-rmmod.patch
+	patches.suse/net-asix-fix-can-t-send-until-first-packet-is-send-i.patch
 	patches.suse/net-usb-asix-do-not-force-pause-frames-support.patch
 	patches.suse/selftests-mptcp-more-stable-diag-tests.patch
 	patches.suse/net-ipv6-unexport-__init-annotated-seg6_hmac_net_ini.patch
