--- a/series.conf
+++ b/series.conf
@@ -7299,6 +7299,7 @@
 	patches.suse/x86-entry-use-the-correct-fence-macro-after-swapgs-in-kernel-cr3.patch
 	patches.suse/x86-xen-add-xenpv_restore_regs_and_return_to_usermode.patch
 	patches.suse/preempt-dynamic-Fix-setup_preempt_mode-return-value.patch
+	patches.suse/sched-uclamp-Fix-rq-uclamp_max-not-set-on-first-enqu.patch
 	patches.suse/serial-core-fix-transmit-buffer-reset-and-memleak.patch
 	patches.suse/serial-pl011-Add-ACPI-SBSA-UART-match-id.patch
 	patches.suse/tty-serial-msm_serial-Deactivate-RX-DMA-for-polling-.patch
