sched/uclamp: Fix iowait boost escaping uclamp restriction (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -9974,6 +9974,7 @@
 	patches.suse/sched-debug-Remove-mpol_get-put-and-task_lock-unlock.patch
 	patches.suse/sched-core-Export-pelt_thermal_tp.patch
 	patches.suse/sched-sugov-Ignore-busy-filter-when-rq-is-capped-by-.patch
+	patches.suse/sched-uclamp-Fix-iowait-boost-escaping-uclamp-restri.patch
 	patches.suse/selftests-rseq-introduce-own-copy-of-rseq-uapi-heade.patch
 	patches.suse/selftests-rseq-Remove-useless-assignment-to-cpu-vari.patch
 	patches.suse/selftests-rseq-Remove-volatile-from-__rseq_abi.patch
