--- a/series.conf
+++ b/series.conf
@@ -12638,6 +12638,7 @@
 	patches.suse/i2c-cadence-Change-large-transfer-count-reset-logic-.patch
 	patches.suse/spi-bcm2835-bcm2835_spi_handle_err-fix-NULL-pointer-.patch
 	patches.suse/lkdtm-disable-return-thunks-in-rodata-c.patch
+	patches.suse/sched-deadline-Fix-BUG_ON-condition-for-deboosted-ta.patch
 	patches.suse/asm-generic-remove-a-broken-and-needless-ifdef-condi.patch
 	patches.suse/watch_queue-Fix-missing-rcu-annotation.patch
 	patches.suse/watch_queue-Fix-missing-locking-in-add_watch_to_obje.patch
