net: usb: ax88179_178a: remove redundant assignment to variable ret (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32506,6 +32506,7 @@
 	patches.suse/selftests-mlxsw-rename-tc_flower_restrictions.sh-to-.patch
 	patches.suse/selftests-mlxsw-tc_restrictions-add-test-to-check-sa.patch
 	patches.suse/selftests-mlxsw-tc_restrictions-add-couple-of-test-f.patch
+	patches.suse/net-usb-ax88179_178a-remove-redundant-assignment-to-.patch
 	patches.suse/net-phy-Add-cable-test-support-to-state-machine.patch
 	patches.suse/net-phy-Add-support-for-polling-cable-test.patch
 	patches.suse/net-ethtool-netlink-Add-support-for-triggering-a-cab.patch
