--- a/series.conf
+++ b/series.conf
@@ -43154,6 +43154,7 @@
 	patches.suse/net-ethernet-cavium-octeon_mgmt-use-phy_start-and-ph.patch
 	patches.suse/bonding-set-dev-needed_headroom-in-bond_setup_by_sla.patch
 	patches.suse/team-set-dev-needed_headroom-in-team_setup_by_port.patch
+	patches.suse/net-usb-ax88179_178a-add-Toshiba-usb-3.0-adapter.patch
 	patches.suse/dpaa2-eth-fix-command-version-for-Tx-shaping.patch
 	patches.suse/mdio-fix-mdio-thunder.c-dependency-build-error.patch
 	patches.suse/mlxsw-spectrum_acl-Fix-mlxsw_sp_acl_tcam_group_add-s.patch
