net: usb: ax88179_178a: add MCT usb 3.0 adapter (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43164,6 +43164,7 @@
 	patches.suse/net-core-introduce-struct-netdev_nested_priv-for-nes.patch
 	patches.suse/net-core-add-nested_level-variable-in-net_device.patch
 	patches.suse/net-usb-ax88179_178a-fix-missing-stop-entry-in-drive.patch
+	patches.suse/net-usb-ax88179_178a-add-MCT-usb-3.0-adapter.patch
 	patches.suse/ethtool-mark-netlink-family-as-__ro_after_init.patch
 	patches.suse/virtio-net-don-t-disable-guest-csum-when-disable-LRO.patch
 	patches.suse/net-phy-realtek-fix-rtl8211e-rx-tx-delay-config.patch
