KVM: VMX: Don't freeze guest when event delivery causes an APIC-access exit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -42772,6 +42772,7 @@
 	patches.suse/0003-dax-fix-detection-of-dax-support-for-non-persistent-.patch
 	patches.suse/kvm-fix-memory-leak-in-kvm_io_bus_unregister_dev
 	patches.suse/kvm-svm-periodically-schedule-when-unregistering-regions-on-destroy.patch
+	patches.suse/KVM-VMX-Don-t-freeze-guest-when-event-delivery-cause.patch
 	patches.suse/soundwire-bus-fix-typo-in-comment-on-INTSTAT-registe.patch
 	patches.suse/soundwire-fix-double-free-of-dangling-pointer.patch
 	patches.suse/video-fbdev-fix-OOB-read-in-vga_8planes_imageblit.patch
