--- a/series.conf
+++ b/series.conf
@@ -53410,6 +53410,7 @@
 	patches.suse/ice-Delete-always-true-check-of-PF-pointer.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/gve-Use-kvcalloc-instead-of-kvzalloc.patch
+	patches.suse/net-usb-use-eth_hw_addr_set.patch
 	patches.suse/Bluetooth-sco-Fix-lock_sock-blockage-by-memcpy_from_.patch
 	patches.suse/Bluetooth-fix-use-after-free-error-in-lock_sock_nest.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-ID-for-Realtek-R.patch
