KVM: x86: handle !lapic_in_kernel case in kvm_cpu_*_extint (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46217,6 +46217,7 @@
 	patches.suse/powerpc-64s-Fix-allnoconfig-build-since-uaccess-flus.patch
 	patches.suse/kvm-s390-pv-mark-mm-as-protected-after-the-set-secure-parameters-and-improve-cleanup
 	patches.suse/kvm-s390-remove-diag318-reset-code
+	patches.suse/KVM-x86-handle-lapic_in_kernel-case-in-kvm_cpu_-_ext.patch
 	patches.suse/platform-x86-thinkpad_acpi-Do-not-report-SW_TABLET_M.patch
 	patches.suse/platform-x86-thinkpad_acpi-Add-BAT1-is-primary-batte.patch
 	patches.suse/platform-x86-thinkpad_acpi-Send-tablet-mode-switch-a.patch
