KVM: x86: Update vCPU's hv_clock before back to guest when tsc_offset is adjusted (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52936,6 +52936,7 @@
 	patches.suse/KVM-x86-Don-t-force-set-BSP-bit-when-local-APIC-is-m.patch
 	patches.suse/KVM-nVMX-Unconditionally-clear-nested.pi_pending-on-.patch
 	patches.suse/KVM-s390-index-kvm-arch.idle_mask-by-vcpu_idx.patch
+	patches.suse/KVM-x86-Update-vCPU-s-hv_clock-before-back-to-guest-.patch
 	patches.suse/net-hso-add-failure-handler-for-add_net_device.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-0x1060-composition.patch
 	patches.suse/qlcnic-Remove-redundant-unlock-in-qlcnic_pinit_from_.patch
