--- a/series.conf
+++ b/series.conf
@@ -7132,6 +7132,7 @@
 	patches.suse/net-hns3-fix-one-incorrect-value-of-page-pool-info-w.patch
 	patches.suse/net-hns3-fix-incorrect-components-info-of-ethtool-re.patch
 	patches.suse/net-mscc-ocelot-don-t-downgrade-timestamping-RX-filt.patch
+	patches.suse/net-dsa-microchip-implement-multi-bridge-support.patch
 	patches.suse/erofs-fix-deadlock-when-shrink-erofs-slab.patch
 	patches.suse/NFSv42-Don-t-fail-clone-unless-the-OP_CLONE-operatio.patch
 	patches.suse/NFSv42-Fix-pagecache-invalidation-after-COPY-CLONE.patch
