--- a/series.conf
+++ b/series.conf
@@ -7225,6 +7225,7 @@
 	patches.suse/natsemi-xtensa-fix-section-mismatch-warnings.patch
 	patches.suse/net-dsa-mv88e6xxx-Fix-application-of-erratum-4.8-for.patch
 	patches.suse/net-dsa-mv88e6xxx-Drop-unnecessary-check-in-mv88e639.patch
+	patches.suse/net-dsa-mv88e6xxx-Save-power-by-disabling-SerDes-tra.patch
 	patches.suse/net-mlx5e-IPsec-Fix-Software-parser-inner-l3-type-se.patch
 	patches.suse/net-mlx5e-Fix-missing-IPsec-statistics-on-uplink-rep.patch
 	patches.suse/net-mlx5e-Sync-TIR-params-updates-against-concurrent.patch
