net: dsa: mv88e6xxx: Link in pcs_get_state() if AN is bypassed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7228,6 +7228,7 @@
 	patches.suse/net-dsa-mv88e6xxx-Save-power-by-disabling-SerDes-tra.patch
 	patches.suse/net-dsa-mv88e6xxx-Add-fix-for-erratum-5.2-of-88E6393.patch
 	patches.suse/net-dsa-mv88e6xxx-Fix-inband-AN-for-2500base-x-on-88.patch
+	patches.suse/net-dsa-mv88e6xxx-Link-in-pcs_get_state-if-AN-is-byp.patch
 	patches.suse/net-mlx5e-IPsec-Fix-Software-parser-inner-l3-type-se.patch
 	patches.suse/net-mlx5e-Fix-missing-IPsec-statistics-on-uplink-rep.patch
 	patches.suse/net-mlx5e-Sync-TIR-params-updates-against-concurrent.patch
