--- a/series.conf
+++ b/series.conf
@@ -7526,6 +7526,7 @@
 	patches.suse/selftests-Add-duplicate-config-only-for-MD5-VRF-test.patch
 	patches.suse/selftests-Fix-raw-socket-bind-tests-with-VRF.patch
 	patches.suse/selftests-Fix-IPv6-address-bind-tests.patch
+	patches.suse/net-dsa-mv88e6xxx-Unforce-speed-duplex-in-mac_link_d.patch
 	patches.suse/selftest-net-forwarding-declare-NETIFS-p9-p10.patch
 	patches.suse/net-stmmac-fix-tc-flower-deletion-for-VLAN-priority-.patch
 	patches.suse/flow_offload-return-EOPNOTSUPP-for-the-unsupported-m.patch
