dsa: mv88e6xxx: fix debug print for SPEED_UNFORCED (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7556,6 +7556,7 @@
 	patches.suse/ixgbe-set-X550-MDIO-speed-before-talking-to-PHY.patch
 	patches.suse/net-stmmac-dwmac-rk-fix-oob-read-in-rk_gmac_setup.patch
 	patches.suse/sfc_ef100-potential-dereference-of-null-pointer.patch
+	patches.suse/dsa-mv88e6xxx-fix-debug-print-for-SPEED_UNFORCED.patch
 	patches.suse/net-smc-Prevent-smc_release-from-long-blocking
 	patches.suse/net-systemport-Add-global-locking-for-descriptor-lif.patch
 	patches.suse/bpf-Fix-kernel-address-leakage-in-atomic-fetch.patch
