net: dsa: hellcreek: Add STP forwarding rule (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8101,6 +8101,7 @@
 	patches.suse/ibmvnic-Update-driver-return-codes.patch
 	patches.suse/ibmvnic-remove-unused-defines.patch
 	patches.suse/net-dsa-hellcreek-Fix-insertion-of-static-FDB-entrie.patch
+	patches.suse/net-dsa-hellcreek-Add-STP-forwarding-rule.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
