sched/core: Do not requeue task on CPU excluded from cpus_mask (bnc#1199356).

--- a/series.conf
+++ b/series.conf
@@ -12554,6 +12554,9 @@
 	# bnc#1193175
 	patches.suse/sched-fair-Revert-update_pick_idlest-Select-group-with-lowest-group_util-when-idle_cpus-are-equal.patch
 
+	# bnc#1199356
+	patches.suse/sched-core-Do-not-requeue-task-on-CPU-excluded-from-cpus_mask.patch
+
 	########################################################
 	# Memory management
 	########################################################
