PM: runtime: Remove link state checks in rpm_get/put_supplier() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43740,6 +43740,7 @@
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-configur.patch
 	patches.suse/cpufreq-tegra186-Fix-initial-frequency.patch
 	patches.suse/ACPI-processor-Print-more-information-when-acpi_proc.patch
+	patches.suse/PM-runtime-Remove-link-state-checks-in-rpm_get-put_s.patch
 	patches.suse/PM-runtime-Fix-timer_expires-data-type-on-32-bit-arc.patch
 	patches.suse/PM-hibernate-Batch-hibernate-and-resume-IO-requests.patch
 	patches.suse/PM-hibernate-remove-the-bogus-call-to-get_gendisk-in.patch
