media: v4l2-mem2mem: always consider OUTPUT queue during poll (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43502,6 +43502,7 @@
 	patches.suse/media-rcar_drif-Allocate-v4l2_async_subdev-dynamical.patch
 	patches.suse/media-rcar-csi2-Allocate-v4l2_async_subdev-dynamical.patch
 	patches.suse/media-mx2_emmaprp-Fix-memleak-in-emmaprp_probe.patch
+	patches.suse/media-v4l2-mem2mem-always-consider-OUTPUT-queue-duri.patch
 	patches.suse/media-tc358743-initialize-variable.patch
 	patches.suse/media-tc358743-cleanup-tc358743_cec_isr.patch
 	patches.suse/media-media-pci-prevent-memory-leak-in-bttv_probe.patch
