media: rc: increase rc-mm tolerance and add debug message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11556,6 +11556,7 @@
 	patches.suse/media-venus-core-Fix-msm8996-frequency-table.patch
 	patches.suse/media-venus-Fix-occasionally-failures-to-suspend.patch
 	patches.suse/media-rc-mark-input-device-as-pointing-stick.patch
+	patches.suse/media-rc-increase-rc-mm-tolerance-and-add-debug-mess.patch
 	patches.suse/media-mceusb-fix-out-of-bounds-read-in-MCE-receiver-.patch
 	patches.suse/media-rc-prevent-memory-leak-in-cx23888_ir_probe.patch
 	patches.suse/media-flexcop-usb-fix-NULL-ptr-deref-in-flexcop_usb_.patch
