media: rtl28xxu: set keymap for Astrometa DVB-T2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11558,6 +11558,7 @@
 	patches.suse/media-rc-mark-input-device-as-pointing-stick.patch
 	patches.suse/media-rc-increase-rc-mm-tolerance-and-add-debug-mess.patch
 	patches.suse/media-mceusb-fix-out-of-bounds-read-in-MCE-receiver-.patch
+	patches.suse/media-rtl28xxu-set-keymap-for-Astrometa-DVB-T2.patch
 	patches.suse/media-rc-prevent-memory-leak-in-cx23888_ir_probe.patch
 	patches.suse/media-flexcop-usb-fix-NULL-ptr-deref-in-flexcop_usb_.patch
 	patches.suse/media-cec-funcs.h-add-status_req-checks.patch
