media: usb: dvb-usb-v2: rtl28xxu: convert to use i2c_new_client_device() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21165,6 +21165,7 @@
 	patches.suse/media-i2c-mt9v032-fix-enum-mbus-codes-and-frame-size.patch
 	patches.suse/media-v4l2-rect.h-fix-v4l2_rect_map_inside-top-left-.patch
 	patches.suse/media-sti-bdisp-fix-a-possible-sleep-in-atomic-conte.patch
+	patches.suse/media-usb-dvb-usb-v2-rtl28xxu-convert-to-use-i2c_new.patch
 	patches.suse/media-iguanair-fix-endpoint-sanity-check.patch
 	patches.suse/media-uvcvideo-Avoid-cyclic-entity-chains-due-to-mal.patch
 	patches.suse/media-uvcvideo-Add-a-quirk-to-force-GEO-GC6500-Camer.patch
