media: rtl28xxu: add missing sleep before probing slave demod (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23330,6 +23330,7 @@
 	patches.suse/media-staging-imx-Missing-assignment-in-imx_media_ca.patch
 	patches.suse/media-venus-hfi_parser-Ignore-HEVC-encoding-for-V1.patch
 	patches.suse/media-vsp1-tidyup-VI6_HGT_LBn_H-macro.patch
+	patches.suse/media-rtl28xxu-add-missing-sleep-before-probing-slav.patch
 	patches.suse/media-go7007-Fix-URB-type-for-interrupt-handling.patch
 	patches.suse/media-v4l2-core-fix-a-use-after-free-bug-of-sd-devno.patch
 	patches.suse/media-v4l2-core-fix-entity-initialization-in-device_.patch
