net:enetc: allocate CBD ring data memory using DMA coherent methods (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10283,6 +10283,7 @@
 	patches.suse/igc-avoid-kernel-warning-when-changing-RX-ring-param.patch
 	patches.suse/igb-refactor-XDP-registration.patch
 	patches.suse/msft-hv-2528-Netvsc-Call-hv_unmap_memory-in-the-netvsc_device_rem.patch
+	patches.suse/net-enetc-allocate-CBD-ring-data-memory-using-DMA-co.patch
 	patches.suse/ath10k-fix-memory-overwrite-of-the-WoWLAN-wakeup-pac.patch
 	patches.suse/ath5k-fix-OOB-in-ath5k_eeprom_read_pcal_info_5111.patch
 	patches.suse/ath9k_htc-fix-uninit-value-bugs.patch
