blacklist.conf: Patch has a number of high risk dependencies

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1546,3 +1546,4 @@ c92cbaea3cc0a80807e386922f801eb6d3652c81 # no such function
 c95c34f01bbda4421c25fdc9b04a4a4aab10d36c # xsk: Remove dangling function declaration from header file
 83810f84ecf11dfc5a9414a8b762c3501b328185 # may cause regression for charging from switched off laptops and bsc#1201691
 703f7066f40599c290babdb79dd61319264987e9 # breaks kABI for a cleanup
+2cfb7a1b031b0e816af7a6ee0c6ab83b0acdf05a # Has a number of high risk dependencies
