blacklist.conf: Comment fix only

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1548,3 +1548,4 @@ c95c34f01bbda4421c25fdc9b04a4a4aab10d36c # xsk: Remove dangling function declara
 703f7066f40599c290babdb79dd61319264987e9 # breaks kABI for a cleanup
 2cfb7a1b031b0e816af7a6ee0c6ab83b0acdf05a # Has a number of high risk dependencies
 ff11a7ce1f0f8c1e7870de26860024b4ddbf5755 # Fixes pointing to misleading commit
+f276031b4e2f4c961ed6d8a42f0f0124ccac2e09 # Comment fix only
