blacklist.conf: Build time micro-optimisation

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1552,3 +1552,4 @@ f276031b4e2f4c961ed6d8a42f0f0124ccac2e09 # Comment fix only
 1463f74f492eea7191f0178e01f3d38371a48210 # Build fix that assumes bash does not exist
 ea79e5168be644fdaf7d4e6a73eceaf07b3da76a # Build time micro-optimisation
 0e11773e76098729552b750ccff79374d1e62002 # Build time micro-optimisation
+9a066357184485784f782719093ff804d05b85db # Build time micro-optimisation
