blacklist.conf: GCC-12 not used

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1557,3 +1557,4 @@ ea79e5168be644fdaf7d4e6a73eceaf07b3da76a # Build time micro-optimisation
 cf10bd4c4aff8dd64d1aa7f2a529d0c672bc16af # KASAN not configured
 27fe73394a1c6d0b07fa4d95f1bca116d1cc66e9 # KASAN not configured
 1139aeb1c521eb4a050920ce6c64c36c4f2a3ab7 # Clang not used for build
+37462a920392cb86541650a6f4121155f11f1199 # GCC-12 not used
