blacklist.conf: UML not used

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1559,3 +1559,4 @@ cf10bd4c4aff8dd64d1aa7f2a529d0c672bc16af # KASAN not configured
 1139aeb1c521eb4a050920ce6c64c36c4f2a3ab7 # Clang not used for build
 37462a920392cb86541650a6f4121155f11f1199 # GCC-12 not used
 5aff4dfdb4ae2741cfff759d917f597f2c7f70aa # Cosmetic patch
+c200e4bb44e80b343c09841e7caaaca0aac5e5fa # UML not used
