sched/membarrier: fix missing local execution of ipi_sync_rq_state() (git fixes (sched/membarrier)).

--- a/series.conf
+++ b/series.conf
@@ -49390,6 +49390,7 @@
 	patches.suse/x86-sev-es-introduce-ip_within_syscall_gap-helper
 	patches.suse/x86-sev-es-check-regs-sp-is-trusted-before-adjusting-vc-ist-stack
 	patches.suse/x86-sev-es-use-_copy_from_user_inatomic
+	patches.suse/sched-membarrier-fix-missing-local-execution-of-ipi_sync_rq_state.patch
 	patches.suse/hrtimer-Update-softirq_expires_next-correctly-after-.patch
 	patches.suse/svcrdma-disable-timeouts-on-rdma-backchannel.patch
 	patches.suse/NFSD-Repair-misuse-of-sv_lock-in-5.10.16-rt30.patch
