profiling: fix shift-out-of-bounds bugs (git fixes).

--- a/series.conf
+++ b/series.conf
@@ -52984,6 +52984,7 @@
 	patches.suse/PCI-of-Don-t-fail-devm_pci_alloc_host_bridge-on-miss.patch
 	patches.suse/PCI-iproc-Fix-BCMA-probe-resource-handling.patch
 	patches.suse/PCI-xilinx-nwl-Enable-the-clock-through-CCF.patch
+	patches.suse/profiling-fix-shift-out-of-bounds-bugs.patch
 	patches.suse/Kconfig.debug-drop-selecting-non-existing-HARDLOCKUP.patch
 	patches.suse/ipc-replace-costly-bailout-check-in-sysvipc_find_ipc.patch
 	patches.suse/SUNRPC-improve-error-response-to-over-size-gss-crede.patch
