tick/nohz: Use WARN_ON_ONCE() to prevent console saturation (git fixes (kernel/time)).

--- a/series.conf
+++ b/series.conf
@@ -55514,6 +55514,7 @@
 	patches.suse/genirq-affinity-Consider-that-CPUs-on-nodes-can-be-u.patch
 	patches.suse/smp-Fix-offline-cpu-check-in-flush_smp_call_function.patch
 	patches.suse/timers-Fix-warning-condition-in-__run_timers.patch
+	patches.suse/tick-nohz-Use-WARN_ON_ONCE-to-prevent-console-saturation.patch
 	patches.suse/spi-atmel-quadspi-Fix-the-buswidth-adjustment-betwee.patch
 	patches.suse/e1000e-Fix-possible-overflow-in-LTR-decoding.patch
 	patches.suse/net-sched-cls_u32-fix-netns-refcount-changes-in-u32_.patch
