sched/fair: Revise comment about lb decision matrix (git fixes (sched/fair)).

--- a/series.conf
+++ b/series.conf
@@ -55712,6 +55712,7 @@
 	patches.suse/irqchip-armada-370-xp-Do-not-touch-Performance-Count.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
 	patches.suse/irqchip-irq-xtensa-mx-fix-initial-IRQ-affinity.patch
+	patches.suse/sched-fair-Revise-comment-about-lb-decision-matrix.patch
 	patches.suse/lockdown-also-lock-down-previous-kgdb-use.patch
 	patches.suse/arm64-stackleak-fix-current_top_of_stack.patch
 	patches.suse/tpm-ibmvtpm-Correct-the-return-value-in-tpm_ibmvtpm_.patch
