media: smipcie: fix interrupt handling and IR timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48667,6 +48667,7 @@
 	patches.suse/media-zr364xx-fix-memory-leaks-in-probe.patch
 	patches.suse/media-uvcvideo-Accept-invalid-bFormatIndex-and-bFram.patch
 	patches.suse/media-uvcvideo-Allow-entities-with-no-pads.patch
+	patches.suse/media-smipcie-fix-interrupt-handling-and-IR-timeout.patch
 	patches.suse/ALSA-hda-realtek-modify-EAPD-in-the-ALC886.patch
 	patches.suse/ALSA-hda-hdmi-Drop-bogus-check-at-closing-a-stream.patch
 	patches.suse/ALSA-hda-Add-another-CometLake-H-PCI-ID.patch
